# router/router.go
@@ -37,4 +37,5 @@ func register(router *gin.Engine) {
 	router.GET("/api/captcha", controller.Captcha)
 	router.GET("/swagger/*any", ginSwagger.WrapHandler(swaggerFiles.Handler))
 	router.POST("/api/login", controller.Login)
+	router.POST("/api/post/add", controller.CreateSysPost)
 }
